syntax = "proto3";

package pps_v2;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/ppsdb";

message ClusterDefaultsWrapper {
  reserved 1, 2;
  reserved "details_json", "effective_details_json";
  string json = 3;
}

message ProjectDefaultsWrapper {
  string json = 3;
}
